@@ -1,163 +1,170 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- lifted from troff+man by doclifter -->
 <refentry xmlns='http://docbook.org/ns/docbook' version='5.0' xml:lang='en' xml:id='rtweight1'>
-<refmeta>
+  <refmeta>
     <refentrytitle>RTWEIGHT
-</refentrytitle>
-<manvolnum>1</manvolnum>
-<refmiscinfo class='source'>BRL-CAD</refmiscinfo>
-<refmiscinfo class='manual'>BRL-CAD</refmiscinfo>
-</refmeta>
+    </refentrytitle>
+    <manvolnum>1</manvolnum>
+    <refmiscinfo class='source'>BRL-CAD</refmiscinfo>
+    <refmiscinfo class='manual'>BRL-CAD</refmiscinfo>
+  </refmeta>
 
-<refnamediv>
-<refname>rtweight</refname>
-<refpurpose>Calculate weight, centroid and volume data for an mged model, using raytracing</refpurpose>
-</refnamediv>
-<!-- body begins here -->
-<refsynopsisdiv xml:id='synopsis'>
-<cmdsynopsis>
+  <refnamediv>
+    <refname>rtweight</refname>
+    <refpurpose>Calculate mass, centroid, and volume of geometry using raytracing</refpurpose>
+  </refnamediv>
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id='synopsis'>
+    <cmdsynopsis>
+      <command>rtweight</command>
+      <arg choice='opt' rep='repeat'><replaceable>options</replaceable></arg>
+      <arg choice='plain'><replaceable>model.g</replaceable></arg>
+      <arg choice='plain' rep='repeat'><replaceable>objects</replaceable></arg>
+
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+
+  <refsect1 xml:id='description'><title>DESCRIPTION</title>
+  <para>
+    <command>rtweight</command> operates on the indicated <emphasis
+    remap='I'>objects</emphasis> in <emphasis
+    remap='I'>model.g</emphasis>.  Material density information and
+    region line of sight (LOS) thickness measurements obtained via ray
+    tracing are used to calculate the mass for each region encountered.
+    It will calculate and report volume of the objects specified.  With
+    material properties, it will also report per-region mass information
+    as well as the overall geometric centroid.  All calculations take
+    any Boolean operations into consideration.
+  </para>
+
+  <para>
+    <command>rtweight</command> can either use density information
+    stored directly in a .g database or read a density file specified by
+    the <option>-d</option> option.
+  </para>
+
+  <para>
+    If using a density file the file must contain lines with the
+    material number, density in g/cc, and material name, each separated
+    by some white space.  See the
+    <citerefentry><refentrytitle>gqa</refentrytitle><manvolnum>1</manvolnum></citerefentry>
+    manual page for more information about defining and managing density
+    information.
+  </para>
+
+  <para>The following options are recognized.</para>
+  <variablelist remap='TP'>
+    <varlistentry>
+      <term><option>-s#</option></term>
+      <listitem>
+        <para>Number of rays to fire in X and Y directions (square grid).
+        Default is 512 (512x512).  Conflicts with
+        <option>-g</option></para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-g#</option></term>
+      <listitem>
+        <para>Distance between rays in the X and Y directions in
+        millimeters.  Conflicts with <option>-s</option></para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-a#</option></term>
+      <listitem>
+        <para>Select azimuth in degrees.  Used with
+        <option>-e</option>
+        and conflicts with
+        <option>-M</option></para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-e#</option></term>
+      <listitem>
+        <para>Select elevation in degrees.  Used with
+        <option>-a</option>
+        and conflicts with
+        <option>-M</option></para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-d file</option></term>
+      <listitem>
+        <para>Read density information from the specified file.</para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-M</option></term>
+      <listitem>
+        <para>Read model2view matrix from standard input.
+        Conflicts with
+        <option>-a</option>
+        and
+        <option>-e</option></para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-r</option></term>
+      <listitem>
+        <para>Report individual region weights by region path name and
+        also by region id number.  The default only prints the total
+        weight for all the objects specified.</para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-o file</option></term>
+      <listitem>
+        <para>Send the output to a specified file.  The default is to
+        standard output.</para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><option>-P#</option></term>
+      <listitem>
+        <para>Specify the maximum number of processors (in a
+        multi-processor system) to be used for this execution.  The
+        default is the maximum number for the machine.</para>
+      </listitem>
+    </varlistentry>
+  </variablelist>
+
+  <para><command>rtweight</command> also accepts all other options
+  that the
+  <citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>
+  program implements, such as for non-square views, perspective,
+  etc.</para>
+  </refsect1>
+
+  <refsect1 xml:id='see_also'><title>SEE ALSO</title>
+  <para><citerefentry><refentrytitle>mged</refentrytitle><manvolnum>1</manvolnum></citerefentry>, <citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>, <citerefentry><refentrytitle>librt</refentrytitle><manvolnum>3</manvolnum></citerefentry></para>
+  </refsect1>
+
+  <refsect1 xml:id='diagnostics'><title>DIAGNOSTICS</title>
+  <para>Numerous error conditions are possible.  Descriptive messages
+  are printed on standard error (file descriptor 2).</para>
+  </refsect1>
+
+  <refsect1 xml:id='bugs'><title>BUGS</title>
+  <para>Most deficiencies observed while using the
   <command>rtweight</command>
-    <arg choice='opt' rep='repeat'><replaceable>options</replaceable></arg>
-    <arg choice='plain'><replaceable>model.g</replaceable></arg>
-    <arg choice='plain' rep='repeat'><replaceable>objects</replaceable></arg>
+  program are usually with the
+  <citerefentry><refentrytitle>librt</refentrytitle><manvolnum>3</manvolnum></citerefentry>
+  package instead.</para>
+  </refsect1>
 
-</cmdsynopsis>
-</refsynopsisdiv>
+  <refsect1 xml:id='author'><title>AUTHOR</title>
+  <para>James E. Hunt</para>
+  </refsect1>
 
+  <refsect1 xml:id='copyright'><title>COPYRIGHT</title>
+  <para>This software is Copyright (c) 1991-2020 United States Government as
+  represented by the U.S. Army Research Laboratory.</para>
+  </refsect1>
 
-<refsect1 xml:id='description'><title>DESCRIPTION</title>
-<para><command>rtweight</command>
-operates on the indicated
-<emphasis remap='I'>objects</emphasis>
-in
-<emphasis remap='I'>model.g</emphasis>
-to calculate the volume and centroid of each region encountered along
-rays.  Material density information
-and region line of sight (LOS) thickness estimates are used to calculate
-the mass for each region.
-</para>
-
-<para>
-	<command>rtweight</command> can either use density information stored
-	directly in a .g database or read a density
-	file specified by the <option>-d</option> option.
-</para>
-<para>
-	If using a density file the file must contain lines with the material
-	number, density in g/cc, and material name, each separated by some
-	white space.  See the <citerefentry><refentrytitle>gqa</refentrytitle><manvolnum>1</manvolnum></citerefentry> manual page for more information about defining
-	and managing density information.
-</para>
-
-<para>The following options are recognized.</para>
-<variablelist remap='TP'>
-  <varlistentry>
-  <term><option>-s#</option></term>
-  <listitem>
-<para>Number of rays to fire in X and Y directions (square grid).
-Default is 512 (512x512).  Conflicts with
-<option>-g</option></para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-g#</option></term>
-  <listitem>
-<para>Distance between rays in the X and Y directions in millimeters.  Conflicts with
-<option>-s</option></para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-a#</option></term>
-  <listitem>
-<para>Select azimuth in degrees.  Used with
-<option>-e</option>
-and conflicts with
-<option>-M</option></para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-e#</option></term>
-  <listitem>
-<para>Select elevation in degrees.  Used with
-<option>-a</option>
-and conflicts with
-<option>-M</option></para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-d file</option></term>
-  <listitem>
-<para>Read density information from the specified file.</para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-M</option></term>
-  <listitem>
-<para>Read model2view matrix from standard input.
-Conflicts with
-<option>-a</option>
-and
-<option>-e</option></para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-r</option></term>
-  <listitem>
-<para>Report individual region weights by region path name and also by region
-id number.  The default only prints the total weight for all the objects
-specified.</para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-o file</option></term>
-  <listitem>
-<para>Send the output to a specified file.  The default is to standard output.</para>
-  </listitem>
-  </varlistentry>
-  <varlistentry>
-  <term><option>-P#</option></term>
-  <listitem>
-<para>Specify the maximum number of processors (in a multi-processor system) to be
-used for this execution.  The default is the maximum number for the machine.</para>
-  </listitem>
-  </varlistentry>
-</variablelist>
-
-<para><command>rtweight</command>
-also accepts all other options that the
-<citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>
-program implements, such as for non-square views, perspective, etc.</para>
-</refsect1>
-
-<refsect1 xml:id='see_also'><title>SEE ALSO</title>
-<para><citerefentry><refentrytitle>mged</refentrytitle><manvolnum>1</manvolnum></citerefentry>, <citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>, <citerefentry><refentrytitle>librt</refentrytitle><manvolnum>3</manvolnum></citerefentry></para>
-</refsect1>
-
-<refsect1 xml:id='diagnostics'><title>DIAGNOSTICS</title>
-<para>Numerous error conditions are possible.
-Descriptive messages are printed on standard error (file descriptor 2).</para>
-</refsect1>
-
-<refsect1 xml:id='bugs'><title>BUGS</title>
-<para>Most deficiencies observed while using the
-<command>rtweight</command>
-program are usually with the
-<citerefentry><refentrytitle>librt</refentrytitle><manvolnum>3</manvolnum></citerefentry>
-package instead.</para>
-</refsect1>
-
-<refsect1 xml:id='author'><title>AUTHOR</title>
-<para>James E. Hunt</para>
-</refsect1>
-
-<refsect1 xml:id='copyright'><title>COPYRIGHT</title>
-<para>This software is Copyright (c) 1991-2020 United States Government as
-represented by the U.S. Army Research Laboratory.</para>
-</refsect1>
-
-<refsect1 xml:id='bug_reports'><title>BUG REPORTS</title>
-<para>Reports of bugs or problems should be submitted via electronic
-mail to <email>devs@brlcad.org</email></para>
-</refsect1>
+  <refsect1 xml:id='bug_reports'><title>BUG REPORTS</title>
+  <para>Reports of bugs or problems should be submitted via electronic
+  mail to <email>devs@brlcad.org</email></para>
+  </refsect1>
 </refentry>
 
